--- a/project1.html
+++ b/project1.html
@@ -25,11 +25,11 @@
       <h2 class="text-3xl font-semibold mb-10 text-center">All My Clip Studio Art & Animations</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
         <!-- Replace these placeholders with your art files -->
-        <img src="clipstudio_art1.jpg" alt="Art 1" class="rounded-xl shadow" />
+        <img src="work/kirb.jpg" alt="Art 1" class="rounded-xl shadow" />
         <img src="clipstudio_art2.jpg" alt="Art 2" class="rounded-xl shadow" />
         <img src="clipstudio_art3.jpg" alt="Art 3" class="rounded-xl shadow" />
-        <video src="work/kirby%20dance%201.clip" controls class="rounded-xl shadow"></video>
-        <video src="clipstudio_animation2.mp4" controls class="rounded-xl shadow"></video>
+        <video src="work/kirbydance1.mp4" controls class="rounded-xl shadow"></video>
+        <video src="work/project.mp4" controls class="rounded-xl shadow"></video>
         <img src="clipstudio_art4.jpg" alt="Art 4" class="rounded-xl shadow" />
       </div>
     </div>
