--- a/project2.html
+++ b/project2.html
@@ -25,8 +25,8 @@
       <h2 class="text-3xl font-semibold mb-10 text-center">All My Adobe Photoshop Work</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
         <!-- Replace these placeholders with your Photoshop work -->
-        <img src="photoshop_art1.jpg" alt="Photoshop Art 1" class="rounded-xl shadow" />
-        <img src="photoshop_art2.jpg" alt="Photoshop Art 2" class="rounded-xl shadow" />
+        <img src="work/Artboard%201.jpg" alt="Photoshop Art 1" class="rounded-xl shadow" />
+        <img src="work/Artboard%202.jpg" alt="Photoshop Art 2" class="rounded-xl shadow" />
         <img src="photoshop_art3.jpg" alt="Photoshop Art 3" class="rounded-xl shadow" />
         <img src="photoshop_art4.jpg" alt="Photoshop Art 4" class="rounded-xl shadow" />
         <img src="photoshop_art5.jpg" alt="Photoshop Art 5" class="rounded-xl shadow" />
