--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
       <h2 class="text-3xl font-semibold mb-6">Contact Me</h2>
       <p class="text-gray-600 mb-8">Reach me through any of the following ways:</p>
       <div class="flex flex-col gap-4 text-lg">
-        <p>Phone: 123-456-7890</p>
+        <p>Phone: 085-1445194</p>
         <p>Email: <a href="mailto:your@email.com" class="text-blue-600 hover:underline">20098855@mail.wit.ie</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/zacheriah-ibekwe-" target="_blank" class="text-blue-600 hover:underline">linkedin.com/in/yourprofile</a></p>
       </div>
