--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -13,11 +13,11 @@
       Hi, I’m <span class="text-blue-600">Your Name</span>
     </h1>
     <p class="text-lg text-gray-600 max-w-2xl">
-      I’m a [Your Role: Developer/Designer/etc.] passionate about building modern, user-friendly digital experiences.
+      I’m a graphic designer and animator passionate about creating new designs for the world to see.
     </p>
     <div class="mt-6 flex gap-4">
       <a href="#projects" class="bg-blue-600 text-white px-6 py-3 rounded-2xl shadow hover:bg-blue-700 transition">View Projects</a>
-      <a href="#contact" class="border border-gray-400 px-6 py-3 rounded-2xl hover:bg-gray-100 transition">Contact Me</a>
+      <a href="contact.html" class="border border-gray-400 px-6 py-3 rounded-2xl hover:bg-gray-100 transition">Contact Me</a>
     </div>
   </section>
 
@@ -26,7 +26,7 @@
     <div class="max-w-4xl mx-auto text-center">
       <h2 class="text-3xl font-semibold mb-4">About Me</h2>
       <p class="text-gray-600 leading-relaxed">
-        Write a short bio here about your background, skills, and what drives you. Keep it personal yet professional so visitors connect with your story.
+     Hi, I’m Zacheriah Ibekwe, a 22-year-old Multimedia Applications Development student currently in my third year at South East Technological University (SETU). I’m passionate about graphic design, animation, and digital media creation. My work focuses on blending creativity with technology to craft visually engaging and interactive experiences. I enjoy exploring new design tools, experimenting with motion graphics, and developing multimedia projects that bring ideas to life through compelling visuals and storytelling.
       </p>
     </div>
   </section>
@@ -49,22 +49,13 @@
           <a href="project2.html" class="border border-gray-400 px-4 py-2 rounded-2xl hover:bg-gray-100 transition">View More</a>
         </div>
         <!-- Project 3 -->
-        <div class="bg-white rounded-2xl shadow-lg p-6">
-          <h3 class="text-xl font-semibold mb-2">Project 3</h3>
-          <p class="text-gray-600 mb-4">Short description of the project, the tech stack, and what problem it solves.</p>
-          <a href="project3.html" class="border border-gray-400 px-4 py-2 rounded-2xl hover:bg-gray-100 transition">View More</a>
-        </div>
-      </div>
+      
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="py-20 px-6 bg-white">
-    <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-3xl font-semibold mb-6">Get In Touch</h2>
-      <p class="text-gray-600 mb-6">
-        Have a project in mind or just want to say hi? Reach out and let’s connect.
-      </p>
-      <a href="mailto:your@email.com" class="bg-blue-600 text-white px-6 py-3 rounded-2xl shadow hover:bg-blue-700 transition">Say Hello</a>
-    </div>
-  </
+  <!-- Footer -->
+  <footer class="py-6 text-center text-gray-500 text-sm">
+    © <script>document.write(new Date().getFullYear());</script> Your Name. All rights reserved.
+  </footer>
+</body>
+</html>
