--- a/project2.html
+++ b/project2.html
@@ -27,10 +27,9 @@
         <!-- Replace these placeholders with your Photoshop work -->
         <img src="work/Artboard%201.jpg" alt="Photoshop Art 1" class="rounded-xl shadow" />
         <img src="work/Artboard%202.jpg" alt="Photoshop Art 2" class="rounded-xl shadow" />
-        <img src="photoshop_art3.jpg" alt="Photoshop Art 3" class="rounded-xl shadow" />
-        <img src="photoshop_art4.jpg" alt="Photoshop Art 4" class="rounded-xl shadow" />
-        <img src="photoshop_art5.jpg" alt="Photoshop Art 5" class="rounded-xl shadow" />
-        <img src="photoshop_art6.jpg" alt="Photoshop Art 6" class="rounded-xl shadow" />
+        <img src="work/upwards%20face.jpg" alt="Photoshop Art 3" class="rounded-xl shadow" />
+        <img src="work/Artboard%201%20copy.png" alt="Photoshop Art 4" class="rounded-xl shadow" />
+       
       </div>
     </div>
   </main>
