--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Hero Section -->
   <section class="flex flex-col items-center justify-center h-screen text-center px-6">
     <h1 class="text-5xl font-bold mb-4">
-      Hi, I’m <span class="text-blue-600">Your Name</span>
+      Hi, I’m <span class="text-blue-600">Zacheriah Ibekwe</span>
     </h1>
     <p class="text-lg text-gray-600 max-w-2xl">
       I’m a graphic designer and animator passionate about creating new designs for the world to see.
