--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <!-- Footer -->
   <footer class="py-6 text-center text-gray-500 text-sm">
-    © <script>document.write(new Date().getFullYear());</script> Your Name. All rights reserved.
+    © <script>document.write(new Date().getFullYear());</script> Zacheriah Ibekwe. All rights reserved.
   </footer>
 </body>
 </html>
